# staccato

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  deque.cpp  deque.h  main.cpp  meson.build  scheduler.h  slides.tex  task.cpp  task.h  thread_pool.h  utils.h  worker.h
benchmarks/: .gitignore  plor.r  run.sh
benchmarks/cilk/: blkmul.cpp  dfs.cpp  fib.cpp  matmul.cpp  mergesort.cpp  meson.build  nfib.cpp
benchmarks/cilk/blkmul/: CMakeLists.txt  main.cpp
benchmarks/cilk/dfs/: CMakeLists.txt
benchmarks/cilk/fib/: CMakeLists.txt
benchmarks/cilk/matmul/: CMakeLists.txt  main.cpp
benchmarks/cilk/megresort/: CMakeLists.txt  main.cpp
benchmarks/cilk/mergesort/: CMakeLists.txt  main.cpp
benchmarks/comparison/: Counter.hpp  Makefile  test_suite.h
benchmarks/comparison/schedulers/: openmp.h  tbb.h
benchmarks/comparison/tasks/: dfs.h  knapsack.h  mergesort.h
benchmarks/openmp/: blkmul.cpp  dfs.cpp  fib.cpp  matmul.cpp  nfib.cpp
benchmarks/openmp/blkmul/: CMakeLists.txt  main.cpp
benchmarks/openmp/dfs/: CMakeLists.txt
benchmarks/openmp/fib/: CMakeLists.txt  main.cpp
benchmarks/openmp/matmul/: CMakeLists.txt  main.cpp
benchmarks/openmp/mergesort/: CMakeLists.txt  main.cpp
benchmarks/sequential/: blkmul.cpp  mergesort.cpp  meson.build  nfib.cpp
benchmarks/sequential/blkmul/: CMakeLists.txt
benchmarks/sequential/dfs/: CMakeLists.txt  main.cpp
benchmarks/sequential/fib/: CMakeLists.txt  main.cpp
benchmarks/sequential/matmul/: CMakeLists.txt  main.cpp
benchmarks/sequential/mergesort/: CMakeLists.txt
benchmarks/staccato/: blkmul.cpp  counter.cpp  dfs.cpp  fib.cpp  loop.cpp  matmul.cpp  mergesort.cpp  meson.build  nfib.cpp  numatest.cc
benchmarks/staccato/blkmul/: CMakeLists.txt  main.cpp
benchmarks/staccato/dfs/: CMakeLists.txt  main.cpp
benchmarks/staccato/fib/: CMakeLists.txt  main.cpp
benchmarks/staccato/matmul/: CMakeLists.txt  main.cpp
benchmarks/staccato/mergesort/: CMakeLists.txt  main.cpp
benchmarks/tbb/: blkmul.cpp  dfs.cpp  fib.cpp  matmul.cpp  meson.build  nfib.cpp
benchmarks/tbb/blkmul/: CMakeLists.txt  main.cpp
benchmarks/tbb/dfs/: CMakeLists.txt  main.cpp
benchmarks/tbb/fib/: CMakeLists.txt  main.cpp
benchmarks/tbb/matmul/: CMakeLists.txt  main.cpp
benchmarks/tbb/mergesort/: CMakeLists.txt  main.cpp
benchmarks/unit/: Makefile  custom  deque
examples/: CMakeLists.txt  Makefile  custom.cpp  fib.cpp  matmult.cpp  mergesort.cpp
examples/01-class/: CMakeLists.txt  fib-class.cpp
examples/01-fib/: CMakeLists.txt  fib.cpp
examples/02-lambda/: CMakeLists.txt  fib-lambda.cpp
include/: buffer.hpp  constants.h  constants.hpp  counter.hpp  debug.hpp  deque.h  dispatcher.hpp  lambda_task.hpp  lifo_allocator.hpp  root_task.hpp  scheduler.h  scheduler.hpp  statistics.h  statistics.hpp  task.h  task.hpp  task_args.hpp  task_array.hpp  task_deque.h  task_deque.hpp  task_mailbox.hpp  task_meta.hpp  task_stack.hpp  topology.hpp  utils.hpp  worker.h  worker.hpp
include.new/: dispatcher.hpp  scheduler.hpp  task.hpp  utils.hpp  worker.hpp
include.old/: counter.hpp  debug.hpp  dispatcher.hpp  lifo_allocator.hpp  scheduler.hpp  task.hpp  worker.hpp
misc/: simulation.cpp  steal_vs_k.r
misc/imitation/: main.cpp  steals_plot.r
misc/queues_size/: main.cpp
src/: constants.h  deque.cpp  deque.h  lambda_task.cpp  root_task.cpp  scheduler.cpp  scheduler.h  statistics.cpp  statistics.h  task.cpp  task.h  task_args.cpp  task_deque.cpp  task_meta.cpp  utils.h  utils.hpp  worker.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  deque.cpp  lifo_allocator.cpp  meson.build  task_deque.cpp  task_mailbox.cc  task_mock.hpp
tests/comparison/: main.cpp  test_suite.h
tests/comparison/schedulers/: AbstractScheduler.h  cilk.h  openmp.h  staccato.h  tbb.h
tests/comparison/tasks/: dfs.h  fib.h  knapsack.h  matmult.h  mergesort.h
tests/perfomance/: Makefile  custom.h  fib.h  knapsack.h  matmult.h  mergesort.h  results.txt  taskexec.h  test
tests/perfomance/tbb/: custom.h  fib.h  knapsack.h  main.cpp  matmult.h  mergesort.h
tests/unit/: deque.cpp
